Initialized todo-list view

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     </script>
 
     <script type="text/javascript" src="scripts/main.js"></script> <!--put functions in head and js that generates content in body-->
+    <a href="views/todo-list.html">To Do List</a>
   </body>
 </html>
